# agent-research

./: .gitignore  main.py  pyproject.toml  task.md  task2.md
craw_agent/: README.md  project_prompt.md  pyproject.toml
craw_agent/src/weekly_report_crew/: __init__.py  crew.py  main.py
crewai-test/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
crewai-test/.trae/documents/: crewai-classic-project-plan.md
crewai-test/src/crewai_reporter/: __init__.py  agents.py  config.py  crew.py  main.py  tasks.py
crewai-test/tests/: test_structure.py
epad-peg/: $PROFILE  .bashrc  .bot_env  .gitignore  CODEBUDDY.md  README.md  pyproject.toml  start-codebuddy.ps1  start-fallback.bat  start.bat  test-start.bat
epad-peg/src/epad_bot/: __init__.py  config.py  main.py
epad-peg/tests/: test_api.py
stock-peg/backend/: .env.example  .my_env  CLEANUP_REPORT_20260322.md  DATASOURCE_ARCHITECTURE_SUMMARY.md  FASTAPI_INDUSTRIAL_OPTIMIZATION.md  FASTAPI_STARTUP_OPTIMIZATION.md  PMR_PRECOMPUTATION_OPTIMIZATION.md  README.md  check_server_status.py  main.py  pyproject.toml  requirements.txt  run_mcp_server.py  start_backfill_sentiment.bat  start_debug.bat  start_server.bat  test_feishu_send_now.py  test_holdings_api.py  test_initial_data_api.py  test_non_blocking_api.py  test_simple.bat  test_task_3_22.py
stock-peg/backend/agent/: stock-analysis.md  stock-pmr-v2.md
stock-peg/backend/config/: CONSOLE_OUTPUT_GUIDE.md  README.md  config_guide.md  console_output.ini  constants.py  layout.ini  logging_config.py  settings.py  trading_hours.ini  快速使用指南.md
stock-peg/backend/data/: indices_config.json  init_quote_table.sql  stock_name_mapping.json  stock_peg.db-shm  tk.csv  us_market_report_20260306.md  us_market_report_20260307.md  us_market_report_20260310.md  us_market_report_20260311.md  us_market_report_20260314.md  us_market_report_20260319.md  自持股票.md
stock-peg/backend/database/: __init__.py  base.py  models.py  session.py
stock-peg/backend/datasource/: __init__.py  datasource_config.json
stock-peg/backend/feishu_sdk/: __init__.py
stock-peg/backend/mcp_server/: README.md  __init__.py  server.py
stock-peg/backend/middleware/: __init__.py  logging_middleware.py  response_middleware.py
stock-peg/backend/migrations/: add_data_source_track.py  add_smart_analysis.py  migrate_direct.py
stock-peg/backend/models/: __init__.py  daily_watchlist.py  holding.py  prediction.py  response.py  stock.py
stock-peg/backend/routers/: __init__.py  alert.py  cache.py  client_logs.py  config.py  console_config.py  daily_watchlist.py  data_update.py  feishu.py  feishu_chat.py  force_index.py  fundamental.py  holding.py  holdings.py  kline_fast.py  market_data.py  mcp.py  news.py  prediction.py  price_alerts.py  report.py  settings.py  status.py  stock.py  us_market.py  websocket.py
stock-peg/backend/scripts/: backup_database.bat  backup_database.py  migrate_add_target_fields.py  remove_emoji.py
stock-peg/backend/services/: __init__.py  ai_service.py  background_updater.py  bot_chat_logger.py  cache_service.py  card_concurrency_manager.py  client_log_handler.py  console_output_filter.py  daily_watchlist_manager.py  data_source_tracker.py  data_update_manager.py  database_logger.py  debug_log_manager.py  extended_cache.py  force_index_calculator.py  fundamental_analyzer.py  holding_manager.py  holdings_manager.py  indicator_calculator_mp.py  kline_cache.py  llm_report_service.py  llm_service.py  log_cleanup_service.py  log_service.py  managed_logger.py  markdown_profile_loader.py  market_sentiment_cache_service.py  mcp_service.py  ml_predictor.py  news_aggregator.py  pmr_calculator.py  prediction_engine.py  price_alert_manager.py  price_alert_monitor_service.py  price_alert_monitor_service_optimized.py  quote_data_service.py  realtime_pusher.py  report_generator.py  scheduler.py  stock_data_service.py  (+5 more)
stock-peg/backend/test/: DATASOURCE_MONITORING.md  DATASOURCE_TESTING.md  run_datasource_tests.py  test_datasource.py
stock-peg/backend/tools/: backfill_market_sentiment.py  check_log_lines.py  test_log_limit.py  trim_logs.py
stock-peg/backend/utils/: db_helpers.py  index_code_converter.py  json_utils.py  line_limited_handler.py  logging_utils.py  rate_limiter.py  (+1 more)
(+2003 files in other folders)
