[project]
name = "stock-peg"
version = "0.1.0"
description = "智能股票分析平台 - 以自持股票.md为核心"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "aiofiles>=23.2.1",
    "httpx>=0.26.0",
    "akshare>=1.12.0",
    "tushare>=1.3.7",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "ta-lib>=0.4.28",
    "lightgbm>=4.3.0",
    "scikit-learn>=1.4.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "zhipuai>=2.1.5.20231221",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "reportlab>=4.0.0",
    "openpyxl>=3.1.0",
    "yfinance>=0.2.37",
    "pydantic-core>=2.41.5",
    "python-multipart>=0.0.22",
    "config>=0.5.1",
    "asyncpg>=0.31.0",
    "aiohttp>=3.13.3",
    "asyncio>=4.0.0",
    "logging>=0.4.9.6",
    "pytest>=9.0.2",
    "playwright>=1.58.0",
    "baostock>=0.8.9",
    "fastmcp>=2.13.3",
    "lark-oapi>=1.5.3",
    "psutil>=7.2.2",
    "ruff>=0.15.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "data", "database", "models", "routers", "services"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
